landing page even more mobile friendly (bugfix: url bar visibility related problems)

--- a/ngapp/src/app/home/home/home.component.css
+++ b/ngapp/src/app/home/home/home.component.css
@@ -1,13 +1,16 @@
+:host {
+    --landing-image-aspect-ratio: calc(422/525); /* aspect ratio of the image */
+}
+
 .content-area {
     width: calc(100vw - 0px);
-    height: calc(100vh - 0px);
-    overflow-y: hidden;
-    padding: 10px
+    height: 100dvh;
+    padding: 10px;
 }
 
 .scrollable-part {
     overflow-y: auto;
-    height: calc(100vh - 20px);
+    height: calc(100dvh - 20px);
 }
 
 img {
@@ -15,4 +18,25 @@ img {
     max-width: 525px;
     height: auto;
     align-self: center;
+}
+
+.top-image-div {
+    width: 100%;
+    position: fixed;
+    padding-left: 2.5%;
+    padding-right: 2.5%;
+    top: 0px;
+    padding-top: 10px;
+    background-color: white;
+}
+
+.side-image-div {
+    width: 45vw;
+    position: fixed;
+    left: 55%;
+    top: calc((100dvh - (45vw * var(--landing-image-aspect-ratio))) / 2);
+}
+
+.img-margin {
+    margin-top: calc(95vw * var(--landing-image-aspect-ratio));
 }
